# project_mobile_autotests_for_yandex_translate

./: .gitignore  README.md  config.browserstack.env.sample  config.local.env.sample  config.py  conftest.py  pyproject.toml  requirements.txt
notifications/: config.json
project_mobile_autotests_for_yandex_translate/model/: app.py
project_mobile_autotests_for_yandex_translate/model/components/: main_screen.py
project_mobile_autotests_for_yandex_translate/utils/: file.py  utils.py
project_mobile_autotests_for_yandex_translate/utils/allure/: attach.py  report.py
project_mobile_autotests_for_yandex_translate/utils/selene/: patch_element_mobile_commands.py  patch_selector_strategy.py
tests/: conftest.py  test_translate.py
